deployments/k8s/differential-equations-service/differential-equations-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: differential-equations-service
  labels:
    app: differential-equations-service
spec:
  type: NodePort
  selector:
    app: differential-equations-service
  ports:
    - name: http
      port: 80
      targetPort: 5003
      nodePort: 30003
      protocol: TCP
