deployments/k8s/differential-equations-service/differential-equations-virtual-service-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: differential-equations-vs
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /api/differential
    route:
    - destination:
        host: differential-equations-service
        port:
          number: 80
